Added and Modified Cosmetics